2008-03-27  Alexander Larsson  <alexl@redhat.com>

	* glocalfile.c (g_local_file_move):
	Return G_IO_ERROR_IS_DIRECTORY, not G_IO_ERROR_WOULD_MERGE when moving
	file over directory. This is according to the docs and what the move via
	copy+remove fallback does.

2008-03-27  Lin Ma  <Lin.Ma@Sun.COM>

	* fen/*.[hc]: Updated copyright.

2008-03-20  Lin Ma  <Lin.Ma@Sun.COM>

	* fen/fen-data.c: (fdata_adjust_changed): Removed a bad formatted msg.

2008-03-20  Lin Ma  <Lin.Ma@Sun.COM>

	* fen/fen-data.c: (process_events), (fdata_add_event): Fixed FEN does
	not emit attribute changed events when optimizing changed events.
	* fen/fen-helper.c, fen/fen-kernel.c: Added ifdef to default disable
	warning messages.

2008-03-19  Matthias Clasen  <mclasen@redhat.com>

	* gmountoperation.[hc]: Small documentation additions

2008-03-19  Sebastien Bacher  <seb128@ubuntu.com>

	* gunixmounts.c: (guess_mount_type): 
	consider nfs4 mounts as G_UNIX_MOUNT_TYPE_NFS (Closes: #523338)

2008-03-19  Alexander Larsson  <alexl@redhat.com>

        * gfile.c:
        (copy_stream_with_progress):
	Bump block side for copy to 64k to minimize
	overhead for low latency links. (#523015)

2008-03-16  Tor Lillqvist  <tml@novell.com>

	* Makefile.am (libgio_2_0_la_DEPENDENCIES): Make libgio-2.0.la
	depend on gio.def on Windows.

2008-03-12  David Zeuthen  <davidz@redhat.com>

	* gio.symbols:
	* gunixmounts.[ch]:
	Add g_unix_mount_monitor_set_rate_limit() function (#521946)

2008-03-14  Alexander Larsson  <alexl@redhat.com>

        * gunixmounts.c:
        (guess_mount_type):
	Avoid redudant tests (#521851)
	Patch from Josselin Mouette

2008-03-14  Alexander Larsson  <alexl@redhat.com>

        * gfilemonitor.c:
        (g_file_monitor_is_cancelled):
	Fix C89 issue (#521672)
	Patch from Jens Granseuer

2008-03-14  Alexander Larsson  <alexl@redhat.com>

        * fam/fam-helper.[ch]:
        * fam/fam-module.c:
	Shut down fam (including removing fam GSource) when
	module is unloaded (#521513)